--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         $(function() {  
             $('.article').readmore({
                 speed: 75, 
-                // collapsedHeight: 95, 
+                collapsedHeight: 95, 
                 // moreLink: `<a class="ac" href="#">Read more</a>`, 
                 // lessLink: `<a class="ac" href="#">Close</a>`, 
             }); 
