update readmore v3 beta

--- a/beta.html
+++ b/beta.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BETA </title>
 
     <style>
         .article {
@@ -54,21 +54,17 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, excepturi? Neque iste nulla voluptates perferendis repudiandae animi temporibus, officia, similique amet saepe tempora cupiditate necessitatibus! Consequatur mollitia repellat corrupti non alias facilis beatae adipisci architecto officiis veritatis autem magni eligendi, deserunt provident sapiente repudiandae tenetur at quo voluptates perferendis voluptate voluptatem maxime illum? Expedita veniam qui nesciunt itaque at unde rem, aliquid cumque asperiores deleniti eaque. Ad voluptatibus tempora obcaecati mollitia, qui distinctio totam error. Tempore maiores voluptatibus error esse minus et quod reprehenderit molestias sed fugit obcaecati perferendis iure incidunt itaque magnam ducimus quam in, accusamus quaerat officia. Velit eveniet dolorum suscipit perspiciatis, blanditiis ab rerum, labore minima voluptates magnam fuga sequi sit deleniti sunt architecto nulla quas ratione? Beatae cum consectetur voluptate quam doloremque velit! Quisquam commodi vero libero hic blanditiis molestias pariatur eaque reiciendis. Ad iusto quisquam asperiores magni recusandae illum distinctio aspernatur mollitia. Quasi eos in quos earum vel accusamus repellat tempora laudantium! Aliquam, pariatur nesciunt dolorum maxime tenetur ex provident harum praesentium magni, ullam molestias quas! Alias aperiam obcaecati consequuntur et quia laborum nisi voluptatum quaerat porro magni, quibusdam cumque! Deleniti aliquid accusamus quis voluptas, incidunt reiciendis eius magni, sequi architecto voluptatum odit harum quo?
     </article>
 
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js" integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
-    
-    <script src="./jquery.js"></script>r
-    <script src="./readmore.js"></script>r
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js" integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="./readmore-beta.js"></script>
 
     <script>
-        
-        // $(function() {  
-            $('.article').readmore({
-                collapsedHeight: 95, 
-                speed: 75, 
-                // moreLink: `<a class="ac" href="#">Read more</a>`, 
-                // lessLink: `<a class="ac" href="#">Close</a>`, 
-            }); 
-        // });
+        $('.article').readmore({
+            collapsedHeight: 95, 
+            speed: 75, 
+            // moreLink: `<a class="ac" href="#">Read more</a>`, 
+            // lessLink: `<a class="ac" href="#">Close</a>`, 
+        }); 
 
     </script>
 </body>
